...
                        Button {
                            showingAdd = true
                        } label: {
                            Image(systemName: "plus")
                        }
                        .accessibilityLabel("Add new card")
                        .accessibilityIdentifier("AddNewCard")
                    }
                }
                .sheet(isPresented: $showingAdd) {
                    AddCardModalView { word, meaning in
                        vm.dispatch(.save(word, meaning: meaning))
                    }
...
